Fixed MLH badge covering FAQ question titles

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -275,6 +275,10 @@
 }
 
 .anchor{
+    @include media-query($on-palm) {
+        height: $navbar-height + 105px;
+        margin-top: -$navbar-height - 105px;
+    }
     display: block;
     height: $navbar-height + 20px; /*same height as header*/
     margin-top: -$navbar-height - 20px; /*same height as header*/
